Desktop navbar visible on mobile fixed

--- a/main.scss
+++ b/main.scss
@@ -85,6 +85,9 @@
       height: 100vh;
       display: flex;
       align-items: center;
+      .navbar {
+        display: initial;
+      }
     }
     &__menu {
       display: none;
