--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -36,6 +36,7 @@
 
 .header__navbar {
   .navbar {
+    display: none;
     transition: width .5s;
     &__item {
       background-color: transparent;
